Initial updates and comments
